Fix display navbar overflowing page on right side

--- a/app/assets/stylesheets/display.css.scss
+++ b/app/assets/stylesheets/display.css.scss
@@ -8,6 +8,7 @@ body{
 }
 .faves_saves{
     padding-top: 9px;
+    padding-right: 25px;
     font-size: 18pt;
     float: right;
     .heart{
